--- a/Economic/Info.plist
+++ b/Economic/Info.plist
@@ -44,5 +44,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>Allow camera....pleaaaase:-)</string>
 </dict>
 </plist>
